# dto/brands/brands.go
@@ -1,5 +1,11 @@
 package brands
 
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
 type BrandRequest struct {
 	Name string `json:"name" form:"name" gorm:"unique"`
 }
@@ -8,6 +14,10 @@ type BrandResponse struct {
 	ID       uint                   `json:"id"`
 	Name     string                 `json:"name"`
 	Products []BrandProductResponse `json:"products"`
+
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
 }
 
 type BrandProductResponse struct {
