# dto/product/products.go
@@ -1,5 +1,11 @@
 package product
 
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
 type ProductRequest struct {
 	Name     string  `json:"name" form:"name"`
 	Price    float64 `json:"price" form:"price"`
@@ -8,9 +14,12 @@ type ProductRequest struct {
 }
 
 type ProductResponse struct {
-	ID       uint    `json:"id"`
-	Name     string  `json:"name"`
-	Price    float64 `json:"price"`
-	Quantity int     `json:"quantity"`
-	BrandID  uint    `json:"brand_id"`
+	ID        uint           `json:"id"`
+	Name      string         `json:"name"`
+	Price     float64        `json:"price"`
+	Quantity  int            `json:"quantity"`
+	BrandID   uint           `json:"brand_id"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
 }
